feat: use virtual threads in data-server and bump compiler target to 21